--- a/error404.html
+++ b/error404.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
        <div class="row">
            <div class="col-md-4">
                <img src="img/undraw_monitor_iqpq 1.svg" class="img" alt="">
