--- a/error404.html
+++ b/error404.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
        <div class="row">
            <div class="col-md-4">
-               <img src="img/undraw_monitor_iqpq 1.svg" class="img" alt="">
+               <img src="img/Frame4.jpg" class="img" alt="">
            </div>
            <div class="col-md-4">
                <h3 class="text3">THIS APP IS UNDER DEVELOPMENT</h3>
