--- a/error404.html
+++ b/error404.html
@@ -24,7 +24,7 @@
                <h3 class="text2">Check out for the QUBE page to find out home.</h3>
                <br>
                <div class="footbar-btn pb-2">
-                <a href="faqs.html"><button class="footbar-button-home1 btn btn-lg rounded-pill" type="button">FIND OUT MORE</button></a>
+                <a href="www.homeqube.com" target="_blank"><button class="footbar-button-home1 btn btn-lg rounded-pill" type="button">FIND OUT MORE</button></a>
             </div>
            </div>
        </div>
