--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <div class="row">
           
            <div class="col-md-6">
-               <h3 class="text3">THIS APP <br>IS UNDER <br>DEVELOPMENT</h3>
+               <h3 class="text3">Token sale/NFT <br>UNDER development <br> releasing within 30 days </h3>
                <br>
                <div class="footbar-btn pb-2">
                 <a href="https://www.homeqube.com/" target="_blank"><button class="footbar-button-home1 btn btn-lg rounded-pill" type="button">CHECK OUT THE QUBE PAGE</button></a>
