--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <div class="row">
           
            <div class="col-md-6">
-               <h3 class="text3">Token sale/NFT <br>UNDER development</h3>
+               <h3 class="text3">Token pre-sale with NFT <br>UNDER development</h3>
                <div id="countdown" class="countdown">
                    <div class="time">
                        <h2 id="days">00</h2>
