--- a/index.html
+++ b/index.html
@@ -19,6 +19,39 @@
           
            <div class="col-md-6">
                <h3 class="text3">Token pre-sale with NFT <br>UNDER development</h3>
+               <div class="content">   
+                <small>Homeqube.io is an NFT launchpad for community members for merchandise selling 
+                (parts and system architecture products) that are integrated in our app.</small>
+                <br>
+                <br>
+                <small>We are not a marketplace. All our products are single copy first editions 
+                    related to homebuilding, powered by Solana blockchain.</small>
+                <br>
+                <br>
+                <small>
+                    
+                    More information on pricing, whitelisters, design contests and availability here:
+                </small>
+                <div class="col link d-flex align-items justify-content-center">
+                    <div>
+                        <a href="https://www.instagram.com/homeqube.ai/" target="_blank" rel="noreferrer noopener" class="flink-icon">
+                            <img class="footer-icon me-2" src="img/" alt="">
+                        </a>
+                        <a href="https://twitter.com/homeqube_ai" target="_blank" rel="noreferrer noopener" class="flink-icon">
+                            <img class="footer-icon me-2" src="img/twitter.svg" alt="">
+                        </a>
+                        <a href="https://www.facebook.com/Homeqube-Pte-Ltd-SG-110205561591276" target="_blank" rel="noreferrer noopener" class="flink-icon">
+                            <img class="footer-icon me-2" src="img/facebook.svg" alt="">
+                        </a>
+                        <a href="https://www.linkedin.com/company/homeqube-pte-ltd/" target="_blank" rel="noreferrer noopener" class="flink-icon">
+                            <img class="footer-icon me-2" src="img/linkedin.svg" alt="">
+                        </a>
+                        <a href="https://t.me/homeqube" target="_blank" rel="noreferrer noopener" class="flink-icon">
+                            <img class="footer-icon me-2" src="img/telegram.svg" alt="">
+                        </a>
+                    </div>
+                  </div>
+            </div>
                <div id="countdown" class="countdown">
                    <div class="time">
                        <h2 id="days">00</h2>
