--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <div class="row">
           
            <div class="col-md-6">
-               <h3 class="text3">Token pre-sale with NFT <br>UNDER development</h3>
+               <h3 class="text3">Token pre-sale with NFT</h3>
                <div class="content">   
                 <small>Homeqube.io is an NFT launchpad for community members for merchandise selling 
                 (parts and system architecture products) that are integrated in our app.</small>
@@ -32,10 +32,10 @@
                     
                     More information on pricing, whitelisters, design contests and availability here:
                 </small>
-                <div class="col link d-flex align-items justify-content-center">
+                <div class="col link d-flex align-items">
                     <div>
                         <a href="https://www.instagram.com/homeqube.ai/" target="_blank" rel="noreferrer noopener" class="flink-icon">
-                            <img class="footer-icon me-2" src="img/" alt="">
+                            <img class="footer-icon me-2" src="img/instagram.svg" alt="">
                         </a>
                         <a href="https://twitter.com/homeqube_ai" target="_blank" rel="noreferrer noopener" class="flink-icon">
                             <img class="footer-icon me-2" src="img/twitter.svg" alt="">
@@ -75,7 +75,8 @@
                </div>
                <br>
                <div class="footbar-btn pb-2">
-                <a href="https://www.homeqube.com/" target="_blank"><button class="footbar-button-home1 btn btn-lg rounded-pill" type="button">CHECK OUT THE QUBE PAGE</button></a>
+                <a href="https://www.homeqube.com/" target="_blank"><button class="footbar-button-home1 btn btn-lg rounded-pill" 
+                    type="button">WWW.HOMEQUBE.COM</button></a>
             </div>
            </div>
        </div>
