--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                   </div>
             </div>
-               <div id="countdown" class="countdown">
+               <div id="countdown" class="countdown container-fluid">
                    <div class="time">
                        <h2 id="days">00</h2>
                        <small>Days</small>
