--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+    content="Homeqube.io is an NFT launchpad for community members for merchandise selling 
+    (parts and system architecture products) that are integrated in our app">
     <title>Homeqube NFT Launchpad</title>
     <link rel="shortcut icon" href="img/Favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
