--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-    content="Homeqube.io is an NFT launchpad for community members for merchandise selling 
-    (parts and system architecture products) that are integrated in our app">
+    content="We are a Solana Based NFT “Launchpad-Marketplace” for Home Manufacturing, from 3D Printed Parts, Home Designs, 
+    Home System Algorithms, Decors, Fixtures, Furnitures, Prototypes, and related others to Homebuilding">
     <title>Homeqube NFT Launchpad</title>
     <link rel="shortcut icon" href="img/Favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
@@ -21,14 +21,10 @@
        <div class="row">
           
            <div class="col-md-6">
-               <h3 class="text3">Token pre-sale with NFT</h3>
+               <h3 class="text3">   </h3>
                <div class="content">   
-                <small>Homeqube.io is an NFT launchpad for community members for merchandise selling 
-                (parts and system architecture products) that are integrated in our app.</small>
-                <br>
-                <br>
-                <small>We are not a marketplace. All our products are single copy first editions 
-                    related to homebuilding, powered by Solana blockchain.</small>
+                <small>We are a Solana Based NFT “Launchpad-Marketplace” for Home Manufacturing, from 3D Printed Parts, Home Designs, 
+                    Home System Algorithms, Decors, Fixtures, Furnitures, Prototypes, and related others to Homebuilding.</small>
                 <br>
                 <br>
                 <small>
