--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                <h3 class="text3">   </h3>
                <div class="content">   
                 <small>We are a Solana Based NFT “Launchpad-Marketplace” for Home Manufacturing, from 3D Printed Parts, Home Designs, 
-                    Home System Algorithms, Decors, Fixtures, Furnitures, Prototypes, and related others to Homebuilding.</small>
+                    Home System Algorithms, Decors, Fixtures, Furnitures, Prototypes, and related others to homebuilding both for the 
+                    metaverse  and our real world.</small>
                 <br>
                 <br>
                 <small>
