--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                <div class="content">   
                 <small>We are a Solana Based NFT “Launchpad-Marketplace” for Home Manufacturing, from 3D Printed Parts, Home Designs, 
                     Home System Algorithms, Decors, Fixtures, Furnitures, Prototypes, and related others to homebuilding both for the 
-                    metaverse  and our real world.</small>
+                    metaverse  and IRL.</small>
                 <br>
                 <br>
                 <small>
