--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
         <div class="row">
 
             <div class="col justify-content-center p-5">
-                    <img src="img/Icons/wallet.svg" alt="" srcset="">
+                    <img src="img/Icons/wallet2.png" style=" width: 50px; height: 51px;" alt="" srcset="">
                     <br>
                     <br>
                     <p> <b> Set up wallet </b></p>
@@ -579,7 +579,7 @@
             </div>
 
             <div class="col justify-content-center p-5">
-                <img src="img/Icons/collection.svg" alt="" srcset="">
+                <img src="img/Icons/collection2.png" style=" width: 50px; height: 51px;" alt="" srcset="">
                 <br>
                 <br>
                 <p> <b>  Create Designs </b></p>
@@ -590,7 +590,7 @@
             </div>
 
             <div class="col justify-content-center p-5">
-                <img src="img/Icons/nft.svg" alt="" srcset="">
+                <img src="img/Icons/nft2.png" alt="" style=" width: 50px; height: 51px;" srcset="">
                 <br>
                 <br>
                 <p> <b> Explore Designs </b></p>
@@ -599,7 +599,7 @@
             </div>
 
             <div class="col justify-content-center p-5">
-                <img src="img/Icons/sale.svg" alt="" srcset="">
+                <img src="img/Icons/sale2.png" alt="" style=" width: 50px; height: 51px;" srcset="">
                 <br>
                 <br>
                 <p> <b> Collect Design </b> </p>
